// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yarn outdated --all should fallback to computed workspace name 1`] = `
"➤ YN0000: ┌ Checking for outdated dependencies
➤ YN0000: └ Completed

➤ YN0000: Package   Current   Latest   Workspace        Package Type
➤ YN0000: patch     1.0.0     1.0.1    root-workspace   dependencies

➤ YN0000: 1 dependency is out of date
➤ YN0000: Done with warnings
"
`;

exports[`yarn outdated --all should include packages from all workspaces 1`] = `
"➤ YN0000: ┌ Checking for outdated dependencies
➤ YN0000: └ Completed

➤ YN0000: Package   Current   Latest   Workspace   Package Type
➤ YN0000: minor     1.0.0     1.1.0    b           dependencies
➤ YN0000: patch     1.0.0     1.0.1    a           dependencies

➤ YN0000: 2 dependencies are out of date
➤ YN0000: Done with warnings
"
`;
